# aws2lakehouse

./: AWS Discovery - Setup & Scan.ipynb  AWS_Discovery_and_Migration.ipynb  README.md  migrate.py  pyproject.toml  requirements.txt  setup.py
aws2lakehouse/: __init__.py  cli.py  docs_generator.py  roi_calculator.py  state.py
aws2lakehouse.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
aws2lakehouse/agent/: __init__.py  orchestrator.py  prompts.py  tools.py
aws2lakehouse/bootstrap/: __init__.py
aws2lakehouse/cicd/: __init__.py  azure_devops.py
aws2lakehouse/compute/: __init__.py  cluster_mapper.py
aws2lakehouse/dashboard/: __init__.py
aws2lakehouse/discovery/: __init__.py  complexity_analyzer.py  dependency_graph.py  pipeline_inventory.py  wave_planner.py
aws2lakehouse/emr/: __init__.py  emr_migrator.py
aws2lakehouse/factory/: __init__.py  spec_generator.py
aws2lakehouse/genai/: __init__.py  ai_client.py
aws2lakehouse/glue/: __init__.py
aws2lakehouse/governance/: __init__.py
aws2lakehouse/ingestion/: __init__.py
aws2lakehouse/observability/: __init__.py
aws2lakehouse/orchestration/: __init__.py  airflow_converter.py  step_function_converter.py
aws2lakehouse/quality/: __init__.py
aws2lakehouse/utils/: __init__.py  config.py  logger.py
aws2lakehouse/validation/: __init__.py
aws2lakehouse/workflows/: __init__.py
docs/: 01_STRATEGIC_PLANNING_AND_DISCOVERY.md  02_PILOT_AND_INGESTION_DESIGN.md  03_TARGET_ARCHITECTURE_AND_GOVERNANCE.md  04_MIGRATION_EXECUTION.md  05_CICD_AND_DEVOPS.md  06_COLLABORATION_AND_IMPROVEMENT.md  CUTOVER_PLAYBOOK.md  MIGRATION_PLAYBOOK.md  MODULE_REFERENCE.md  PIPELINE_YAML_REFERENCE.md  QUICKSTART.md  README.md  STAKEHOLDER_TEMPLATES.md  pr_template_and_review_checklist.md
examples/: databricks_agent_migration.py
examples/aws_repos/aws-sample-data-project/: MIGRATION_WALKTHROUGH.py  README.md
examples/aws_repos/classic-etl-project/: README.md
examples/aws_repos/glue-library-project/: README.md  setup.py
examples/aws_repos/serverless-data-platform/: README.md
examples/databricks_repos/databricks-ecommerce-platform/: README.md  databricks.yml
templates/medallion/: __init__.py
tests/: conftest.py  test_agent.py  test_cli.py  test_docs_roi_observability.py  test_emr_compute.py  test_factory.py  test_genai_dashboard_bootstrap_cicd.py  test_governance.py  test_ingestion_glue.py  test_integration.py  test_modules.py  test_orchestration.py  test_quality.py  test_scanner.py  test_spec_generator.py  test_state.py  test_workflows_validation.py
(+428 files in other folders)
